--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,6 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #0f0f23;
+  overflow-x: hidden;
 }
 
 code {
